[package]
name = "ugly_gl"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.11.2"
anyhow = "1"
clap = "3.2.22"
glutin = "0.29.1"

[target.'cfg(target_os = "linux")'.dependencies]
glutin_glx_sys = "0.2.0"
openxr = { version = "0.16.0", features = ["loaded"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }
openxr = { version = "0.16.0", features = ["static"] }
