[package]
name = "glutin-openxr-opengl-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
openxr = "0.16.0"
glutin = "0.29.1"

[target.'cfg(target_os = "linux")'.dependencies]
glutin_glx_sys = "0.2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.42.0", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[dev-dependencies]
glow = "0.11.2"

[target.'cfg(target_os = "linux")'.dev-dependencies]
openxr = { version = "0.16.0", features = ["loaded"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
openxr = { version = "0.16.0", features = ["static"] }
